--- a/ocr-cezam/src/css/App.css
+++ b/ocr-cezam/src/css/App.css
@@ -108,3 +108,73 @@
 .cz-form-but button:hover {
     background: #8359ff;
 }
+
+/* Results component */
+.cz-results-content {
+    background: white;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+}
+
+.cz-tabpanel {
+    color: #9271F6;
+    /* height: 100vh; */
+}
+
+/* Loading component */
+.cz-loading-content {
+    background: white;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.cz-loading-content .cz-form-title {
+    font-weight: normal;
+    margin-top: 10vmin;
+}
+
+.cz-loading {
+    display: inline-block;
+    position: relative;
+    width: 150px;
+    height: 150px;
+}
+
+.cz-loading div {
+    position: absolute;
+    border: 4px solid #9271F6;
+    opacity: 1;
+    border-radius: 50%;
+    animation: cz-loading 2s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.cz-loading div:nth-child(2) {
+    animation-delay: -0.66s;
+}
+
+.cz-loading div:nth-child(3) {
+    animation-delay: -1.33s;
+}
+
+@keyframes cz-loading {
+    0% {
+        top: 71px;
+        left: 71px;
+        width: 0;
+        height: 0;
+        opacity: 1;
+    }
+    100% {
+        top: 0px;
+        left: 0px;
+        width: 142px;
+        height: 142px;
+        opacity: 0;
+    }
+}
